# FaceAnything-CoreML

./: .gitignore  README.md  install.sh  pyproject.toml  requirements.txt  run_inference.py
checkpoints/: README.md
coreml/: README.md  convert_coreml.py  requirements_mps.txt  run_coreml.py
coreml/models/FaceAnything_palettize_4bit.mlpackage/: Manifest.json
scripts/: remove_background.py
src/depth_anything_3/: api.py  specs.py
src/depth_anything_3/model/: cam_enc.py  da3.py  dualdpt.py  gsdpt.py
src/depth_anything_3/model/dinov2/: vision_transformer.py
src/depth_anything_3/utils/: pose_align.py
src/depth_anything_3/utils/io/: output_processor.py
src/faceanything/: __init__.py  background.py  colorize.py  export.py  geometry.py  io_utils.py  model.py  predict.py  render.py  tracking.py
